fix: link color accessiblity for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ p {
     --tertiary: #f89fba;
     --background: #19161f;
     --text-color: #adaaa7;
-    --text-link: #5ea8af;
+    --text-link: #8e70CC;
     --inverse-text-color: #0A0909;
   }
 }
